Use variable for bootstrap-less location.
Libraries shouldn't be dependent upon a fixed location for the
underlying bootstrap library. This change switches the location to
a variable that can be set by any consumer.

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -1,8 +1,10 @@
+@bootstrap-less: "/lib/bootstrap/less/";
+
 @import (reference) "./mixins";
 @import (reference) "./variables";
 
 .lf {
-	@import "/lib/bootstrap/less/bootstrap";
+	@import "@{bootstrap-less}/bootstrap";
 
     /**
      * Livefyre stuff
