--- a/src/styles/bar.less
+++ b/src/styles/bar.less
@@ -1,4 +1,4 @@
-@import (reference) "/lib/bootstrap/less/navs";
+@import (reference) "@{bootstrap-less}/navs";
 @import (reference) "./mixins";
 @import (reference) "./variables";
 
