--- a/src/styles/button-groups.less
+++ b/src/styles/button-groups.less
@@ -1,4 +1,4 @@
-@import (reference) "/lib/bootstrap/less/button-groups";
+@import (reference) "@{bootstrap-less}/button-groups";
 @import (reference) "./variables";
 @import (reference) "./mixins";
 @import (reference) "./buttons";
