--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -1,4 +1,4 @@
-@import (reference) "/lib/bootstrap/less/mixins.less";
+@import (reference) "@{bootstrap-less}/mixins.less";
 
 // Button variants
 // -------------------------
