--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -1,8 +1,8 @@
 @import (reference) "./mixins";
 @import (reference) "./variables";
-@import (reference) "/lib/bootstrap/less/forms";
-@import (reference) "/lib/bootstrap/less/utilities";
-@import (reference) "/lib/bootstrap/less/navbar";
+@import (reference) "@{bootstrap-less}/forms";
+@import (reference) "@{bootstrap-less}/utilities";
+@import (reference) "@{bootstrap-less}/navbar";
 
 .lf-navbar {
     .navbar;
