--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,8 +1,7 @@
 /**
  * Bootstrap Variables
  */
-@import "/lib/bootstrap/less/variables.less";
-
+@import "@{bootstrap-less}/variables.less";
 
 // LF colors
 // -------------------------
