--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -1,4 +1,4 @@
-@import (reference) "/lib/bootstrap/less/buttons";
+@import (reference) "@{bootstrap-less}/buttons";
 @import (reference) "./mixins";
 @import (reference) "./variables";
 
