--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -172,6 +172,10 @@
 @btn-danger-bg:                  @lf-red;
 @btn-danger-border:              @lf-red-dark;
 
+@btn-hollow-color:               #fff;
+@btn-hollow-bg:                  fade(@lf-gray-darker, 40%);
+@btn-hollow-border:              #fff;
+
 @btn-link-disabled-color:        @gray-light;
 
 // Labels
