--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -258,7 +258,8 @@
 
 @modal-lg: 900px;
 @modal-md: 600px;
-@modal-sm: 300px;
+@modal-sm: 450px;
+@modal-xs: 300px;
 
 // Alerts
 // -------------------------
