Slats: Create as new component

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -26,6 +26,7 @@
     @import "modals.less";
     @import "navbar.less";
     @import "popovers.less";
+    @import "slats.less";
     @import "tooltip.less";
     @import "toggles.less";
 }
