--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -284,3 +284,16 @@
 // -------------------------
 @close-color:                   @lf-gray;
 @close-height:                  32px;
+
+// Slats
+// -------------------------
+@slat-height:                   60px;
+@slat-padding:                  10px;
+@slat-border-color:             @lf-gray-lighter;
+@slat-bg-hover-color:           @lf-gray-lighter;
+@slat-line-height:              18px;
+@slat-font-color:               @lf-gray-dark;
+@slat-header-font-size:         11px;
+@slat-header-font-color:        @lf-gray;
+@slat-title-size:               @font-size-base;
+@slat-title-color:              @lf-gray-darker;
