Pager: Create LF pager styles

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -25,6 +25,7 @@
     @import "loader.less";
     @import "modals.less";
     @import "navbar.less";
+    @import "pager.less";
     @import "popovers.less";
     @import "slats.less";
     @import "tooltip.less";
