Slats: Add header height variable

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -294,6 +294,7 @@
 @slat-bg-hover-color:           @lf-gray-lighter;
 @slat-line-height:              18px;
 @slat-font-color:               @lf-gray-dark;
+@slat-header-height:            36px;
 @slat-header-font-size:         11px;
 @slat-header-font-color:        @lf-gray;
 @slat-title-size:               @font-size-base;
