--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -146,6 +146,13 @@
 
 // Buttons
 // -------------------------
+
+// Using fixed heights and line-heights instead of padding to improve vertically centering fycons inside buttons
+@btn-height:                     36px;
+@btn-height-xs:                  24px;
+@btn-height-sm:                  30px;
+@btn-height-lg:                  46px;
+
 @btn-font-weight:                500;
 
 @btn-default-color:              @lf-gray-dark;
