--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -153,6 +153,8 @@
 @btn-height-sm:                  30px;
 @btn-height-lg:                  46px;
 
+@btn-radius:                     3px; // Used for all button sizes
+
 @btn-font-weight:                500;
 
 @btn-default-color:              @lf-gray-dark;
