Add extra small input field size

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -143,6 +143,8 @@
 @input-border-focus:            @lf-blue;
 
 @input-height-base:             (@line-height-computed + (@padding-base-vertical * 2) + 2);
+@input-height-xs:               (@font-size-small * 2);
+
 
 // Buttons
 // -------------------------
