--- a/src/styles/forms.less
+++ b/src/styles/forms.less
@@ -168,12 +168,16 @@ input[type="checkbox"],
     }
 }
 
+.lf-input-xs {
+    .input-size(@input-height-xs; 0; (@padding-xs-horizontal / 2); @font-size-small; @line-height-small; @input-border-radius);
+}
+
 .lf-input-sm {
-    .input-size(@input-height-small; @padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @border-radius-small);
+    .input-size(@input-height-small; @padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @input-border-radius);
 }
 
 .lf-input-lg {
-    .input-size(@input-height-large; @padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @border-radius-large);
+    .input-size(@input-height-large; @padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @input-border-radius);
 }
 
 .lf-has-warning {
