Buttons: Fix vertical centering for floated fycons

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -91,6 +91,11 @@
     &:before {
       vertical-align: initial;
     }
+
+    &.pull-left,
+    &.pull-right {
+      line-height: inherit;
+    }
   }
 }
 
