--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -100,6 +100,9 @@
 }
 
 .lf-btn {
+  .fycon-xs {
+    font-size: @font-size-base - 4px;
+  }
   .fycon-sm {
     font-size: @font-size-base - 2px;
   }
@@ -110,6 +113,9 @@
 
 .lf-btn-xs, 
 .lf-btn-sm {
+  .fycon-xs {
+    font-size: @font-size-small - 4px;
+  }
   .fycon-sm {
     font-size: @font-size-small - 2px;
   }
@@ -119,6 +125,9 @@
 }
 
 .lf-btn-lg {
+  .fycon-xs {
+    font-size: @font-size-large - 8px;
+  }
   .fycon-sm {
     font-size: @font-size-large - 4px;
   }
