Buttons: Add margins around fycons

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -86,6 +86,7 @@
   [class*=" fycon-"] {
     display: inline-block;
     vertical-align: middle;
+    margin: 0 2px;
     line-height: 1; // Must be smaller than .lf-btn's to prevent fycon from expanding height of button.
 
     &:before {
@@ -135,4 +136,3 @@
     font-size: @font-size-large + 4px;
   }
 }
-
