Buttons: Adjust padding variables

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -81,7 +81,18 @@
 
 // Components
 // -------------------------
-@padding-base-vertical:     7px;
+@padding-base-vertical:          7px;
+@padding-base-horizontal:        12px;
+
+@padding-large-vertical:         10px;
+@padding-large-horizontal:       18px;
+
+@padding-small-vertical:         5px;
+@padding-small-horizontal:       12px;
+
+@padding-xs-vertical:            1px;
+@padding-xs-horizontal:          12px;
+
 @component-active-bg:       @lf-blue;
 @border-radius-xsmall:		2px;
 
