Sidebar: Initial sidebar and sidebar form styles

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -21,12 +21,14 @@
     @import "fycons.less";
     @import "input-groups.less";
     @import "forms.less";
+    @import "form-sidebar.less";
     @import "labels.less";
     @import "loader.less";
     @import "modals.less";
     @import "navbar.less";
     @import "pager.less";
     @import "popovers.less";
+    @import "sidebar.less";
     @import "slats.less";
     @import "tooltip.less";
     @import "toggles.less";
