--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -156,6 +156,10 @@
 @input-height-base:             (@line-height-computed + (@padding-base-vertical * 2) + 2);
 @input-height-xs:               (@font-size-small * 2);
 
+@sidebar-form-group-height:       48px;
+@sidebar-form-label-font-size:    @font-size-base;
+@sidebar-form-label-line-height:  18px;
+
 
 // Buttons
 // -------------------------
