No-Data Block: Add styles for new no-data block component

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -25,6 +25,7 @@
     @import "labels.less";
     @import "loader.less";
     @import "modals.less";
+    @import "no-data.less";
     @import "navbar.less";
     @import "pager.less";
     @import "popovers.less";
