--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -325,3 +325,20 @@
 @slat-header-font-color:        @lf-gray;
 @slat-title-size:               @font-size-base;
 @slat-title-color:              @lf-gray-darker;
+
+
+// Toggles
+// -------------------------
+@lf-tog-width: 50px;
+@lf-tog-height: 28px;
+@lf-tog-label-width: 75px;
+
+@lf-tog-width-sm: 36px;
+@lf-tog-height-sm: 22px;
+@lf-tog-label-width-sm: 64px;
+
+@lf-tog-handle: @lf-tog-height;
+@lf-tog-handle-sm: @lf-tog-height-sm;
+
+@lf-tog-on-bg: @lf-green;
+@lf-tog-off-bg: #eee;
