--- a/src/styles/close.less
+++ b/src/styles/close.less
@@ -1,7 +1,7 @@
 @import (reference) "./mixins";
 @import (reference) "./variables";
 
-.lf-close {
+.close {
   box-sizing: border-box;
   height: @close-height;
   width: @close-height;
@@ -12,9 +12,7 @@
   vertical-align: middle;
   float: right;
   font-size: (@font-size-base);
-  font-weight: @close-font-weight;
   line-height: @close-height - 4;
-  color: @close-color;
   text-align: center;
   text-shadow: none;
   -webkit-appearance: none;
@@ -23,9 +21,6 @@
 
   &:hover,
   &:focus {
-    color: @close-color;
-    text-decoration: none;
-    cursor: pointer;
     background: rgba(47, 52, 64, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.15);
     .opacity(1);
@@ -37,23 +32,21 @@
   }
 
   button& {
-    padding: 0;
-    cursor: pointer;
-    background: transparent;
     border: 1px solid red;
-    -webkit-appearance: none;
     -moz-apperance: none;
     box-sizing: border-box;
   } 
 }
 
 
-.lf-close.light {
+.close.light {
   color: #fff;
+
   &:hover, :focus {
     color: inherit;
     background: rgba(47, 52, 64, 0.3);
   }
+  
   &:active {
     background: rgba(47, 52, 64, 0.35);
   }
