--- a/src/styles/avatars.less
+++ b/src/styles/avatars.less
@@ -1,8 +1,8 @@
 /**
-* Makes an .lf-avatar size
+* Makes an .avatar size
 * @mixin
 */
-.make-lf-avatar-size(
+.make-avatar-size(
 	@width;
 	@height;
 	@border-radius;
@@ -12,18 +12,18 @@
 		border-radius: @border-radius;
 }
 
-.lf-avatar, .lf-avatar > img {
-	.make-lf-avatar-size(48px, 48px, 3px);
+.avatar, .avatar > img {
+	.make-avatar-size(48px, 48px, 3px);
 }
 
-.lf-avatar-lg, .lf-avatar-lg > img {
-	.make-lf-avatar-size(96px, 96px, 6px);
+.avatar-lg, .avatar-lg > img {
+	.make-avatar-size(96px, 96px, 6px);
 }
 
-.lf-avatar-sm, .lf-avatar-sm > img {
-	.make-lf-avatar-size(36px, 36px, 3px);
+.avatar-sm, .avatar-sm > img {
+	.make-avatar-size(36px, 36px, 3px);
 }
 
-.lf-avatar-xs, .lf-avatar-xs > img {
-	.make-lf-avatar-size(24px, 24px, 3px);
+.avatar-xs, .avatar-xs > img {
+	.make-avatar-size(24px, 24px, 3px);
 }
